--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,15 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.19.0
+  provider: ^6.1.1
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
   assets:
-  - assets/images/
-  - assets/json/
+    - assets/images/
+    - assets/json/
